[gd_scene load_steps=2 format=3 uid="uid://combat_ui_scene"]

[ext_resource type="Script" path="res://combat_ui.gd" id="1"]

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="PanelContainer" parent="VBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/TopBar"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="VBox/TopBar/HBoxContainer"]
layout_mode = 2
text = "Turn: 1"
theme_override_font_sizes/font_size = 18

[node name="Spacer" type="Control" parent="VBox/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EnergyLabel" type="Label" parent="VBox/TopBar/HBoxContainer"]
layout_mode = 2
text = "Energy: âš¡4/4"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)

[node name="Spacer2" type="Control" parent="VBox/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="VBox/TopBar/HBoxContainer"]
custom_minimum_size = Vector2(120, 35)
layout_mode = 2
text = "End Turn"
theme_override_font_sizes/font_size = 16
theme_override_font_sizes/font_size = 16

[node name="BattlefieldMargin" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="Battlefield" type="HBoxContainer" parent="VBox/BattlefieldMargin"]
layout_mode = 2
alignment = 1

[node name="CrewSide" type="HBoxContainer" parent="VBox/BattlefieldMargin/Battlefield"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/BackColumn"]
layout_mode = 2
text = "BACK"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/BackColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MiddleColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/MiddleColumn"]
layout_mode = 2
text = "MIDDLE"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/MiddleColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FrontColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/FrontColumn"]
layout_mode = 2
text = "YOUR CREW"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/CrewSide/FrontColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBox/BattlefieldMargin/Battlefield"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="EnemySide" type="HBoxContainer" parent="VBox/BattlefieldMargin/Battlefield"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FrontColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/FrontColumn"]
layout_mode = 2
text = "ENEMIES"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/FrontColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MiddleColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/MiddleColumn"]
layout_mode = 2
text = "MIDDLE"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/MiddleColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BackColumn" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/BackColumn"]
layout_mode = 2
text = "BACK"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="Container" type="VBoxContainer" parent="VBox/BattlefieldMargin/Battlefield/EnemySide/BackColumn"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="LogMargin" type="MarginContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="LogScroll" type="ScrollContainer" parent="VBox/LogMargin"]
layout_mode = 2

[node name="LogText" type="Label" parent="VBox/LogMargin/LogScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Combat Log:
"
theme_override_font_sizes/font_size = 11
vertical_alignment = 1

[node name="HandMargin" type="MarginContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BottomHBox" type="HBoxContainer" parent="VBox/HandMargin"]
layout_mode = 2

[node name="DrawPileIndicator" type="VBoxContainer" parent="VBox/HandMargin/BottomHBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="DrawPileIcon" type="Label" parent="VBox/HandMargin/BottomHBox/DrawPileIndicator"]
layout_mode = 2
text = "ðŸ“š"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="DrawPileCount" type="Label" parent="VBox/HandMargin/BottomHBox/DrawPileIndicator"]
layout_mode = 2
text = "15"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)

[node name="DiscardPileIndicator" type="VBoxContainer" parent="VBox/HandMargin/BottomHBox"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="DiscardPileIcon" type="Label" parent="VBox/HandMargin/BottomHBox/DiscardPileIndicator"]
layout_mode = 2
text = "ðŸ—‘"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="DiscardPileCount" type="Label" parent="VBox/HandMargin/BottomHBox/DiscardPileIndicator"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.7, 0.7, 1)

[node name="HandContainer" type="HBoxContainer" parent="VBox/HandMargin/BottomHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
